@@ -20,7 +20,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import javax.inject.Inject;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -132,7 +131,7 @@ public class UserRepositoryImpl extends AbstractSimpleRepositoryImpl<User, UserI
                 .fetch()
                 .stream()
                 .map(t -> new UserActiveUsersVetsTuple(t.get(qUser), t.get(qVet)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -285,16 +284,13 @@ public class UserRepositoryImpl extends AbstractSimpleRepositoryImpl<User, UserI
         if (ids.isEmpty()) {
             return Collections.emptyList();
         }
-        return factory.select(getEntityPathBase())
-                .from(QUser.user)
-                .where(QUser.user.id.in(ids.stream().map(UserId::getValue).collect(Collectors.toList())))
-                .fetch();
+        return factory.select(getEntityPathBase()).from(QUser.user).where(QUser.user.id.in(ids.stream().map(UserId::getValue).toList())).fetch();
     }
 
     @Override
     protected void preDelete(Collection<User> entities) {
 
-        List<UserHistory> histories = userHistoryRepository.findAllHistoriesOfEntities(entities.stream().map(User::getId).collect(Collectors.toList()));
+        List<UserHistory> histories = userHistoryRepository.findAllHistoriesOfEntities(entities.stream().map(User::getId).toList());
         for (UserHistory history : histories) {
             history.setReference(Optional.empty());
             userHistoryRepository.update(history);
